# haskellpracticetest

./: cabal.project  hpt.cabal
src/: Practice.hs
test/: Tests.hs
