cabal-version:      3.0
-- WARNING: YOU MUST NOT UNDER ANY CIRCUMSTANCES EDIT THIS FILE, YOU HAVE BEEN WARNED
name:               hpt
version:            0.1.0.0
synopsis:           Haskell Practice Test
author:             Imperial College London
maintainer:         j.willis19@imperial.ac.uk
build-type:         Simple

library
    exposed-modules:  Practice
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >=4.13 && <5

test-suite hpt-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    default-language: Haskell2010
    other-modules:    IC.TestSuite
    main-is:          Tests.hs
    build-depends:    hpt,
                      base >=4.13 && <5
